# toddler-typing

./: .gitignore  3D_CHARACTER_INTEGRATION.md  ANDROID_PORT_SUMMARY.md  BUILD_COMPLETE.md  BUILD_PORTABLE.md  DEVELOPMENT.md  GAMIFICATION_PROPOSAL.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_APPLIED.md  SWITCHING_2D_TO_3D.md  URGENT_FIX_README.txt  USAGE.md  apply_ui_fixes.py  build.py  config.dev.json  config.example.json  config.production.json  create_shortcut.ps1  detect_screen.py  electron-builder.yml  fix_coloring.py  fix_gamification.py  force_rebuild.bat  forge.config.js  increment_version.py  launcher.py  make-portable.py  package-lock.json  package.json  pyproject.toml  quick_build.bat  requirements-build.txt  requirements-dev.txt  requirements.txt  run.py  test_card_ui.py  (+2 more)
.githooks/: pre-commit
.github/workflows/: release.yml  test.yml
android/: .gitignore  QUICKSTART.md  README.md  settings.gradle
android/app/: build.gradle  proguard-rules.pro
docs/: BUILD.md  BUILD_PORTABLE.md  USAGE.md  configuration.md  development.md
electron/: ipc-handlers.js  main.js  preload.js
electron/modules/: auto-updater.js  keyboard-locker.js  progress-manager.js  settings-manager.js  tts-engine.js  tts-worker.js
scripts/: download-tts-model.js  sync-android.js
src/toddler_typing/: __init__.py  __version__.py  api.py  main.py
src/toddler_typing/assets/: README.md
src/toddler_typing/audio/: voice_manager.py
src/toddler_typing/config/: __init__.py  fonts.py  settings.py
src/toddler_typing/drawing/: __init__.py  canvas.py  canvas.py.backup  canvas_additions.txt
src/toddler_typing/keyboard/: locker.py  (+1 more)
tests/: __init__.py  test_imports.py  test_settings.py
(+67 files in other folders)
